--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,200;1,400&display=swap');
+
+
 * {
 box-sizing: border-box;
 }
 
 body{
   margin: 0;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 h1,h2,p{
